test/core/errors/offsets_error/zs/relational_operator_error.zs
package relational_operator_error;

struct RelationalOperatorError
{
    uint32 offset;
offset > 10:
    string field;
};
